fixed: position of dn icon overlaps with label, #228

--- a/app/views/styles/component/_grid-oc.scss
+++ b/app/views/styles/component/_grid-oc.scss
@@ -1,5 +1,5 @@
 .question .btn-dn {
-    margin: 0 14px;
+    margin: 0 8px;
     top: -2px;
 }
 
